Fix zoom hint `z-index`

--- a/src/Map.css
+++ b/src/Map.css
@@ -402,7 +402,7 @@ body.is-touch-device .leaflet-control-zoom {
   right: 60px;
   top: 10px;
   max-width: 100px; /* Ensure the block does not overlap the search bar */
-  z-index: 2000;
+  z-index: 1000;
   border-radius: 4px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2);
   color: rgba(0, 0, 0, 0.7);
